# neck

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Notes.md  README.md  SlashTest.csv  Vagrantfile  benchmark.csv  benchmark.py  benchmark_not_used_in_table_1.csv  build-llvm.sh  build.sh  detect-neck.sh  gdbcommands.txt  install.sh  neck.cpp  plot.py  programs_to_benchmark.txt
cmake/: neckid_macros.cmake
config/: CMakeLists.txt  cmd-tool-config-git.json  cmd-tool-config.json  dnsproxy-cnf-file-tool-config.json  mini_httpd-cnf-file-tool-config.json  sky-cnf-file-tool-config.json
countInstr_RQ1/: countPointersInLL.cpp
demo/: wc.ll
include/NeckID/Config/: Configuration.h  Version.h
include/NeckID/NeckID/: DataFlowAnalysis.h  NeckAnalysis.h  NeckAnalysisCFG.h  NeckID.h  TaintAnalysis.h
lib/: CMakeLists.txt
lib/Config/: CMakeLists.txt  Configuration.cpp
lib/NeckID/: CMakeLists.txt  DataFlowAnalysis.cpp  NeckAnalysis.cpp  NeckAnalysisCFG.cpp  NeckID.cpp  TaintAnalysis.cpp
test/llvm_test_code/: CMakeLists.txt  neck-annotation.h
test/llvm_test_code/basic/: CMakeLists.txt  example_01.cpp
test/llvm_test_code/calls/: CMakeLists.txt  call_01.cpp  call_02.cpp  call_03.cpp  call_04.cpp  call_05.cpp
test/llvm_test_code/neck-level/: CMakeLists.txt  neck-annotation.h  neck-same-level.c
test/llvm_test_code/neck-scenarios/: CMakeLists.txt  cycle-from-neck-succ.c  early-exit-from-case.c  iterative-func-before-neck.c  nested-inner-loop.c  nested-loop.c  nested-outer-loop.c  not-in-main.c  recursion-before-neck.c  recursive-func-before-neck.c
tools/: CMakeLists.txt
tools/constantconv/: CMakeLists.txt  constantconv.cpp
tools/neck/: CMakeLists.txt  neck.cpp
unittests/: CMakeLists.txt
unittests/NeckBenchmark/: CMakeLists.txt  NeckBenchmarkTest.cpp
unittests/NeckCoreutilsBenchmark/: CMakeLists.txt  NeckCoreutilsBenchmarkTest.cpp
unittests/NeckCustomScenariosBenchmark/: CMakeLists.txt  NeckCustomScenariosBenchmarkTest.cpp
unittests/NeckDataset2Benchmark/: CMakeLists.txt  NeckDataset2BenchmarkTest.cpp
unittests/NeckDataset5Benchmark/: CMakeLists.txt  NeckDataset5BenchmarkTest.cpp
unittests/NeckID/: CMakeLists.txt  NeckAnalysisTest.cpp  NeckIDTest.cpp
unittests/SlashDatasetBenchmark/: CMakeLists.txt  SlashDatasetBenchmarkTest.cpp
unittests/TestUtils/: TestConfig.h  config.h.in
